# register-your-data-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  licences.json  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: static-analysis.yaml  static-application-security-testing.yaml
alembic/: env.py
alembic/versions/: 22951c5f0f0c_added_provider_admin_tables.py  3f9b7ff8bb73_initial_db_setup.py  b2c6d1170383_add_client_id_to_tooldbmodel.py  ec6411d99e0b_added_contributor_pending_state.py
email_templates/: new_org_needs_approval.html  new_org_needs_approval.txt  new_org_needs_approval_subject.txt  user_requested_to_join_org.html  user_requested_to_join_org.txt  user_requested_to_join_org_subject.txt
src/: audit_log_viewer.py  main.py
src/register_your_data_api/: audit.py  auth.py  authn.py  background_tasks.py  client_application_details_provider.py  dependencies.py  email_generator.py  email_sender.py  exception_handlers.py  exceptions.py  response_schemas.py  suitecrm_client_factory.py  util.py  utilities.py
src/register_your_data_api/auth/: authn.py  authz.py  models.py  user_crm_uuid_provider.py  user_crm_uuid_provider_asgardeo.py
src/register_your_data_api/auth/fga/: fga_provider.py  fga_provider_db.py  fga_validator.py  models.py
src/register_your_data_api/data_handling/: converters.py  data_schemas.py  domain_logic.py
src/register_your_data_api/routers/: datasets.py  discoverable_reporting_orgs.py  misc.py  reporting_orgs.py  users.py
src/register_your_data_api/services/: suitecrm_common.py
tests/: conftest.py
tests/artefacts/suitecrm-mocked-responses/: get_records_contact_5c633101-42be-47ac-81e7-43d6ecb503e3.json  get_records_contact_698e0c1f-4e80-faa9-6533-68de801d1735.json  get_records_contact_7625122c-f752-40dc-a577-5cb49e13de2a.json  get_records_contact_8c51d9bf-46c2-4d1d-869b-d9e2dd63ff48.json  get_records_contact_a1b191ee-4c12-461c-cbe1-68de8173f628.json  get_records_contact_b46b88bd-05e6-4cb8-8b6a-a2c47fcd666d.json  get_records_contact_bea511d3-c7a7-4097-55ed-68de81e94921.json  get_records_datasets_for_ro_552376ae-2aa7-98ab-d800-68daa9bfeb4a.json  get_records_datasets_for_ro_ab851a83-a384-3eb9-caf0-68db8125b067.json  get_records_datasets_for_ro_da17734d-3926-47ef-8563-8a1b0247ed11.json  get_records_reporting_orgs_01_org_1_no_meta.json  get_records_reporting_orgs_02_org_1_with_meta.json  get_records_reporting_orgs_ab851a83-a384-3eb9-caf0-68db8125b067.json  get_records_reporting_orgs_ab851a83-a384-3eb9-caf0-68db8125b067_no_meta.json  get_records_reporting_orgs_da17734d-3926-47ef-8563-8a1b0247ed11.json  get_records_reporting_orgs_da17734d-3926-47ef-8563-8a1b0247ed11_no_meta.json  get_relationship_accounts_id_552376ae-2aa7-98ab-d800-68daa9bfeb4a.json  get_relationship_contacts_id_5c633101-42be-47ac-81e7-43d6ecb503e3.json  get_relationship_contacts_id_698e0c1f-4e80-faa9-6533-68de801d1735.json  get_relationship_contacts_id_7625122c-f752-40dc-a577-5cb49e13de2a.json  get_relationship_contacts_id_b46b88bd-05e6-4cb8-8b6a-a2c47fcd666d.json  get_relationship_contacts_id_bea511d3-c7a7-4097-55ed-68de81e94921.json  get_relationship_ro_552376ae-2aa7-98ab-d800-68daa9bfeb4a.json
tests/helpers/: keys.py  logs.py  mocking.py  prom.py  setup_and_teardown.py  utilities.py
tests/helpers/mocked_objects/: mock_suitecrm.py
tests/integration/: .env  test_access_check.py  test_dataset_routes.py  test_fga_provider_pgdb.py  test_reporting_org_routes.py  test_tools_list.py  test_users_routes.py
tests/security/: test_audit_log_formatter.py  test_header_validation.py  test_jwt_validation_decoding.py  test_token_parser_and_scope_check.py
tests/unit/: test_context.py  test_email_generator.py  test_fga_validator.py  test_paging.py  test_suitecrm_client_factory.py  test_utilities.py
