[project]
name = "register-your-data-api"
version = "0.2.8"
requires-python = ">= 3.12.11"
readme = "README.md"
authors = [{name="IATI Secretariat", email="support@iatistandard.org"}]
license = {file = "LICENSE"}
description = "API for writing to the IATI Registry"

dependencies = [
    "alembic",
    "click",
    "cryptography==45.0.5",
    "fastapi[standard]==0.116.0",
    "libsuitecrm @ git+https://github.com/iati/iati-registry-libsuitecrm@v0.5.0",
    "prometheus-client>=0.22.1",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>3",
    "requests==2.32.4",
    "sqlmodel==0.0.25",
    "SQLAlchemy==2.0.43",
    "types-requests==2.32.4.20250611"
]

[project.optional-dependencies]
dev = [
    "bandit[baseline]",
    "black",
    "flake8",
    "flake8-pyproject",
    "isort",
    "mypy",
    "pip-tools",
    "pytest"
]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["."]
version_path_separator = "os"
sqlalchemy.url = ""

# Logging configuration
[tool.alembic.logger_alembic]
level = "INFO"
handlers = ""
qualname = "alembic"

[tool.alembic.logger_root]
level = "WARN"
handlers = "console"
qualname = ""

[tool.alembic.handler_console]
class = "StreamHandler"
args = "(sys.stderr,)"
level = "NOTSET"
formatter = "generic"

[tool.alembic.formatter_generic]
format = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"

[tool.bandit]
exclude_dirs = ['.ve', '.venv', '.mypy_cache', '.pytest_cache']
fail_on_severity = "LOW"
fail_on_confidence = "LOW"

[tool.bandit.assert_used]
skips = ["*/tests/integration/test_*.py", "*/tests/security/test_*.py", "*/tests/unit/test_*.py"]

[tool.mypy]
strict = true
mypy_path = "src"
files = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/security"]
addopts = [
    "--import-mode=importlib"
]
pythonpath = [
  "src", "tests"
]

[tool.pip-tools]
strip-extras = true

[tool.isort]
py_version=312
extend_skip = ['__pycache__', '.ve', '.venv']
skip_gitignore = true
src_paths = ['src', 'tests']
line_length = 119
profile = "black"

[tool.flake8]
max-line-length = 119
extend_ignore = ['E203', 'W503', 'E275']
exclude = ['__pycache__', '.pytest_cache', '.ve', '.venv']
max_complexity = 7

[tool.black]
line-length = 119
target-version = ['py312']
include='''/.*/*.py$'''
